--- a/src/main/resources/demozone.html
+++ b/src/main/resources/demozone.html
@@ -7,35 +7,58 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="darcula.css">
     <title>Hello, world!</title>
 </head>
 <body>
 <h1>Hello, world!</h1>
 
 <pre><code class="json">
-{  "product": "IBN",
-  "country": "JPN",
-  "location": "Tokyo",
-  "routing": [
+[{  "product": "IBN",
+   "country": "JPN",
+   "location": "Tokyo",
+   "routing": [
     {
-      "accessType": "fixMobPay",
-      "accessNetwork": "",
-      "crnType": "prefix",
-      "crnValue": "234A" ,
-      "pop": "ASIA"
+    "accessType": "fixMobPay",
+    "accessNetwork": "",
+    "crnType": "prefix",
+    "crnValue": "234A" ,
+    "pop": "ASIA"
     }
   ]
-}
+}]
 </code></pre>
+
 
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/@json-editor/json-editor/dist/jsoneditor.min.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.4.0/languages/go.min.js"></script>
+<script src="highlight.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/languages/go.min.js"></script>
 <script>hljs.initHighlightingOnLoad();</script>
+
+
+<script>
+$(document).ready(function(){
+
+    $.ajax({
+	    type: "GET",
+	    headers: {"bearer" : "123ABC987XYZ"},
+	    url: "https://mynumbers.testapi.bics.com/reference/locations",
+	    contentType: "application/json; charset=utf-8",
+	    dataType: "json",
+	    success: function(data) {
+	        alert('success');
+	    },
+	    error: function(msg,url,line) {
+	        alert('error');
+	    }
+ });
+
+});
+
+</script>
 </body>
 </html>
